# fishwar

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
docs/: 注水.md  鱼.md
fishwar/: Cargo.toml
fishwar/assets/shaders/: fragment.spv
fishwar/src/: game_state.rs  main.rs  start_page.rs  waves.rs
inject/: Cargo.toml
inject/assets/shaders/: fragment.spv  fragment.wgsl
inject/src/: game_over.rs  inject.rs  main.rs  start_page.rs  utils.rs  waves.rs
shaders/: Cargo.toml
shaders-builder/: Cargo.toml  rust-toolchain.toml
shaders-builder/src/: main.rs
shaders/src/: lib.rs  waves.rs
src/: main.rs  start_page.rs
wasm/: index.html
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
