[package]
edition = "2021"
name = "shaders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "lib", "dylib" ]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu.git", features = [ "glam" ] }
spirv-std-macros = { git = "https://github.com/EmbarkStudios/rust-gpu.git" }
bytemuck = { version = "1.7.3", features = [ "derive" ] }
